Changed from Module/Link nomenclature to X3D